# pig-game-server

./: .gitignore  CLAUDE.md  GEMINI.md
client/: src
client/ups-sp-client/: build.gradle  settings.gradle
client/ups-sp-client/src/main/java/org/example/: Client.java  Main.java
docs/: client_states.txt  dokumentace.docx  dokumentace.md  pig_gameplay.md
server/: CMakeLists.txt  README.md
server/include/: config.h  game.h  lobby.h  logger.h  parser.h  protocol.h  server.h
server/src/: game.c  lobby.c  logger.c  main.c  parser.c  protocol.c  server.c
